<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="dj.zendo.store.activities.RegisterActivity">

    <EditText
        android:id="@+id/text_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:inputType="textWebEmailAddress"
        android:maxLength="100" />

    <EditText
        android:id="@+id/text_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register_register"
        android:text="@string/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>